testing/tests/ui/break_outside_of_loop.stderr
error: you can only `break` inside a `for` loop
 --> <source attribute>:1:10
  |
       1 | Have a {%break%}, have a parsing error!
         |          ^ close to this token
         |
 --> tests/ui/break_outside_of_loop.rs:5:5
  |
5 |     source = "Have a {%break%}, have a parsing error!",
  |     ^^^^^^
